{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 480,
  "lineage": "385635d6-483f-66db-2bde-dd062e959d46",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8f9cde73d4891e3",
            "arn": "arn:aws:ec2:us-east-1:810731468394:elastic-ip/eipalloc-0c8f9cde73d4891e3",
            "association_id": "eipassoc-00f31d1cd2b6c8a31",
            "domain": "vpc",
            "id": "eipalloc-0c8f9cde73d4891e3",
            "instance": "i-0fb538626e8a406fc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dbecc4a95b8affe8",
            "private_dns": "ip-10-0-0-218.ec2.internal",
            "private_ip": "10.0.0.218",
            "public_dns": "ec2-54-84-165-201.compute-1.amazonaws.com",
            "public_ip": "54.84.165.201",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.Demo",
            "module.bastion_instance.aws_ebs_volume.this",
            "module.bastion_instance.aws_ec2_tag.spot_instance",
            "module.bastion_instance.aws_eip.this",
            "module.bastion_instance.aws_iam_instance_profile.this",
            "module.bastion_instance.aws_iam_role.this",
            "module.bastion_instance.aws_iam_role_policy_attachment.this",
            "module.bastion_instance.aws_instance.ignore_ami",
            "module.bastion_instance.aws_instance.this",
            "module.bastion_instance.aws_security_group.this",
            "module.bastion_instance.aws_spot_instance_request.this",
            "module.bastion_instance.aws_volume_attachment.this",
            "module.bastion_instance.aws_vpc_security_group_egress_rule.this",
            "module.bastion_instance.aws_vpc_security_group_ingress_rule.this",
            "module.bastion_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.bastion_instance.data.aws_partition.current",
            "module.bastion_instance.data.aws_ssm_parameter.this",
            "module.bastion_instance.data.aws_subnet.this",
            "module.bastion_security_group.aws_security_group.this",
            "module.bastion_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_cloudwatch_log_group.flow_log",
            "module.vpc-PP.aws_customer_gateway.this",
            "module.vpc-PP.aws_db_subnet_group.database",
            "module.vpc-PP.aws_default_network_acl.this",
            "module.vpc-PP.aws_default_route_table.default",
            "module.vpc-PP.aws_default_security_group.this",
            "module.vpc-PP.aws_default_vpc.this",
            "module.vpc-PP.aws_egress_only_internet_gateway.this",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_elasticache_subnet_group.elasticache",
            "module.vpc-PP.aws_flow_log.this",
            "module.vpc-PP.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_nat_gateway.this",
            "module.vpc-PP.aws_network_acl.database",
            "module.vpc-PP.aws_network_acl.elasticache",
            "module.vpc-PP.aws_network_acl.intra",
            "module.vpc-PP.aws_network_acl.outpost",
            "module.vpc-PP.aws_network_acl.private",
            "module.vpc-PP.aws_network_acl.public",
            "module.vpc-PP.aws_network_acl.redshift",
            "module.vpc-PP.aws_network_acl_rule.database_inbound",
            "module.vpc-PP.aws_network_acl_rule.database_outbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_inbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_outbound",
            "module.vpc-PP.aws_network_acl_rule.intra_inbound",
            "module.vpc-PP.aws_network_acl_rule.intra_outbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_inbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_outbound",
            "module.vpc-PP.aws_network_acl_rule.private_inbound",
            "module.vpc-PP.aws_network_acl_rule.private_outbound",
            "module.vpc-PP.aws_network_acl_rule.public_inbound",
            "module.vpc-PP.aws_network_acl_rule.public_outbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_inbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_outbound",
            "module.vpc-PP.aws_redshift_subnet_group.redshift",
            "module.vpc-PP.aws_route.database_dns64_nat_gateway",
            "module.vpc-PP.aws_route.database_internet_gateway",
            "module.vpc-PP.aws_route.database_ipv6_egress",
            "module.vpc-PP.aws_route.database_nat_gateway",
            "module.vpc-PP.aws_route.private_dns64_nat_gateway",
            "module.vpc-PP.aws_route.private_ipv6_egress",
            "module.vpc-PP.aws_route.private_nat_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway_ipv6",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.elasticache",
            "module.vpc-PP.aws_route_table.intra",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_route_table.redshift",
            "module.vpc-PP.aws_route_table_association.database",
            "module.vpc-PP.aws_route_table_association.elasticache",
            "module.vpc-PP.aws_route_table_association.intra",
            "module.vpc-PP.aws_route_table_association.outpost",
            "module.vpc-PP.aws_route_table_association.private",
            "module.vpc-PP.aws_route_table_association.public",
            "module.vpc-PP.aws_route_table_association.redshift",
            "module.vpc-PP.aws_route_table_association.redshift_public",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_subnet.elasticache",
            "module.vpc-PP.aws_subnet.intra",
            "module.vpc-PP.aws_subnet.outpost",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_subnet.redshift",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_block_public_access_exclusion.this",
            "module.vpc-PP.aws_vpc_block_public_access_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options_association.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-PP.aws_vpn_gateway.this",
            "module.vpc-PP.aws_vpn_gateway_attachment.this",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.intra",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.private",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.public",
            "module.vpc-PP.data.aws_caller_identity.current",
            "module.vpc-PP.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc-PP.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc-PP.data.aws_partition.current",
            "module.vpc-PP.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:810731468394:loadbalancer/app/alb-demo/f1674754d2019756",
            "arn_suffix": "app/alb-demo/f1674754d2019756",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-demo-567062422.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:810731468394:loadbalancer/app/alb-demo/f1674754d2019756",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-demo",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0b96486a7663dfbfc",
              "sg-0cb69b47b39553661"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007a90ea162b7745d"
              },
              {
                "subnet_id": "subnet-0969f2aeb01c5011c"
              }
            ],
            "subnets": [
              "subnet-007a90ea162b7745d",
              "subnet-0969f2aeb01c5011c"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0531c08eba04a0679",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:810731468394:loadbalancer/app/alb-demo/f1674754d2019756"
          },
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.alb.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:810731468394:listener/app/alb-demo/f1674754d2019756/ff8510f8ca036502",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:810731468394:targetgroup/tg-20250711022034588200000009/eec94f9b9c9a43ee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:810731468394:listener/app/alb-demo/f1674754d2019756/ff8510f8ca036502",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:810731468394:loadbalancer/app/alb-demo/f1674754d2019756",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "data.aws_route53_zone.dns_zone",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:810731468394:listener/app/alb-demo/f1674754d2019756/5e7a5f472d6385cc",
            "certificate_arn": "arn:aws:acm:us-east-1:810731468394:certificate/18e5f1ba-ddef-4fe6-b906-8b19c5e0f9fb",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:810731468394:targetgroup/tg-20250711022034588200000009/eec94f9b9c9a43ee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:810731468394:listener/app/alb-demo/f1674754d2019756/5e7a5f472d6385cc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:810731468394:loadbalancer/app/alb-demo/f1674754d2019756",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-2021-06",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "data.aws_route53_zone.dns_zone",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "demo-tg",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:810731468394:targetgroup/tg-20250711022034588200000009/eec94f9b9c9a43ee",
            "arn_suffix": "targetgroup/tg-20250711022034588200000009/eec94f9b9c9a43ee",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/venkatasaicharan.com/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:810731468394:targetgroup/tg-20250711022034588200000009/eec94f9b9c9a43ee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "weighted_random",
            "load_balancing_anomaly_mitigation": "on",
            "load_balancing_cross_zone_enabled": "false",
            "name": "tg-20250711022034588200000009",
            "name_prefix": "tg-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "environment": "dev",
              "owners": "self",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "self",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "2",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "50"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-PP.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "additional",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "server-1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:810731468394:targetgroup/tg-20250711022034588200000009/eec94f9b9c9a43ee-20250711022305716400000012",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:810731468394:targetgroup/tg-20250711022034588200000009/eec94f9b9c9a43ee",
            "target_id": "i-0a4d322b2427ace8d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.Demo",
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.data.aws_partition.current",
            "module.private_instance.aws_ebs_volume.this",
            "module.private_instance.aws_ec2_tag.spot_instance",
            "module.private_instance.aws_eip.this",
            "module.private_instance.aws_iam_instance_profile.this",
            "module.private_instance.aws_iam_role.this",
            "module.private_instance.aws_iam_role_policy_attachment.this",
            "module.private_instance.aws_instance.ignore_ami",
            "module.private_instance.aws_instance.this",
            "module.private_instance.aws_security_group.this",
            "module.private_instance.aws_spot_instance_request.this",
            "module.private_instance.aws_volume_attachment.this",
            "module.private_instance.aws_vpc_security_group_egress_rule.this",
            "module.private_instance.aws_vpc_security_group_ingress_rule.this",
            "module.private_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.private_instance.data.aws_partition.current",
            "module.private_instance.data.aws_ssm_parameter.this",
            "module.private_instance.data.aws_subnet.this",
            "module.private_security_group.aws_security_group.this",
            "module.private_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_cloudwatch_log_group.flow_log",
            "module.vpc-PP.aws_customer_gateway.this",
            "module.vpc-PP.aws_db_subnet_group.database",
            "module.vpc-PP.aws_default_network_acl.this",
            "module.vpc-PP.aws_default_route_table.default",
            "module.vpc-PP.aws_default_security_group.this",
            "module.vpc-PP.aws_default_vpc.this",
            "module.vpc-PP.aws_egress_only_internet_gateway.this",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_elasticache_subnet_group.elasticache",
            "module.vpc-PP.aws_flow_log.this",
            "module.vpc-PP.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_nat_gateway.this",
            "module.vpc-PP.aws_network_acl.database",
            "module.vpc-PP.aws_network_acl.elasticache",
            "module.vpc-PP.aws_network_acl.intra",
            "module.vpc-PP.aws_network_acl.outpost",
            "module.vpc-PP.aws_network_acl.private",
            "module.vpc-PP.aws_network_acl.public",
            "module.vpc-PP.aws_network_acl.redshift",
            "module.vpc-PP.aws_network_acl_rule.database_inbound",
            "module.vpc-PP.aws_network_acl_rule.database_outbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_inbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_outbound",
            "module.vpc-PP.aws_network_acl_rule.intra_inbound",
            "module.vpc-PP.aws_network_acl_rule.intra_outbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_inbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_outbound",
            "module.vpc-PP.aws_network_acl_rule.private_inbound",
            "module.vpc-PP.aws_network_acl_rule.private_outbound",
            "module.vpc-PP.aws_network_acl_rule.public_inbound",
            "module.vpc-PP.aws_network_acl_rule.public_outbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_inbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_outbound",
            "module.vpc-PP.aws_redshift_subnet_group.redshift",
            "module.vpc-PP.aws_route.database_dns64_nat_gateway",
            "module.vpc-PP.aws_route.database_internet_gateway",
            "module.vpc-PP.aws_route.database_ipv6_egress",
            "module.vpc-PP.aws_route.database_nat_gateway",
            "module.vpc-PP.aws_route.private_dns64_nat_gateway",
            "module.vpc-PP.aws_route.private_ipv6_egress",
            "module.vpc-PP.aws_route.private_nat_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway_ipv6",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.elasticache",
            "module.vpc-PP.aws_route_table.intra",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_route_table.redshift",
            "module.vpc-PP.aws_route_table_association.database",
            "module.vpc-PP.aws_route_table_association.elasticache",
            "module.vpc-PP.aws_route_table_association.intra",
            "module.vpc-PP.aws_route_table_association.outpost",
            "module.vpc-PP.aws_route_table_association.private",
            "module.vpc-PP.aws_route_table_association.public",
            "module.vpc-PP.aws_route_table_association.redshift",
            "module.vpc-PP.aws_route_table_association.redshift_public",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_subnet.elasticache",
            "module.vpc-PP.aws_subnet.intra",
            "module.vpc-PP.aws_subnet.outpost",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_subnet.redshift",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_block_public_access_exclusion.this",
            "module.vpc-PP.aws_vpc_block_public_access_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options_association.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-PP.aws_vpn_gateway.this",
            "module.vpc-PP.aws_vpn_gateway_attachment.this",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.intra",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.private",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.public",
            "module.vpc-PP.data.aws_caller_identity.current",
            "module.vpc-PP.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc-PP.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc-PP.data.aws_partition.current",
            "module.vpc-PP.data.aws_region.current"
          ]
        },
        {
          "index_key": "server-2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:810731468394:targetgroup/tg-20250711022034588200000009/eec94f9b9c9a43ee-20250711022305586400000011",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:810731468394:targetgroup/tg-20250711022034588200000009/eec94f9b9c9a43ee",
            "target_id": "i-089f6dedc9f4f62ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.Demo",
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.data.aws_partition.current",
            "module.private_instance.aws_ebs_volume.this",
            "module.private_instance.aws_ec2_tag.spot_instance",
            "module.private_instance.aws_eip.this",
            "module.private_instance.aws_iam_instance_profile.this",
            "module.private_instance.aws_iam_role.this",
            "module.private_instance.aws_iam_role_policy_attachment.this",
            "module.private_instance.aws_instance.ignore_ami",
            "module.private_instance.aws_instance.this",
            "module.private_instance.aws_security_group.this",
            "module.private_instance.aws_spot_instance_request.this",
            "module.private_instance.aws_volume_attachment.this",
            "module.private_instance.aws_vpc_security_group_egress_rule.this",
            "module.private_instance.aws_vpc_security_group_ingress_rule.this",
            "module.private_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.private_instance.data.aws_partition.current",
            "module.private_instance.data.aws_ssm_parameter.this",
            "module.private_instance.data.aws_subnet.this",
            "module.private_security_group.aws_security_group.this",
            "module.private_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_cloudwatch_log_group.flow_log",
            "module.vpc-PP.aws_customer_gateway.this",
            "module.vpc-PP.aws_db_subnet_group.database",
            "module.vpc-PP.aws_default_network_acl.this",
            "module.vpc-PP.aws_default_route_table.default",
            "module.vpc-PP.aws_default_security_group.this",
            "module.vpc-PP.aws_default_vpc.this",
            "module.vpc-PP.aws_egress_only_internet_gateway.this",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_elasticache_subnet_group.elasticache",
            "module.vpc-PP.aws_flow_log.this",
            "module.vpc-PP.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_nat_gateway.this",
            "module.vpc-PP.aws_network_acl.database",
            "module.vpc-PP.aws_network_acl.elasticache",
            "module.vpc-PP.aws_network_acl.intra",
            "module.vpc-PP.aws_network_acl.outpost",
            "module.vpc-PP.aws_network_acl.private",
            "module.vpc-PP.aws_network_acl.public",
            "module.vpc-PP.aws_network_acl.redshift",
            "module.vpc-PP.aws_network_acl_rule.database_inbound",
            "module.vpc-PP.aws_network_acl_rule.database_outbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_inbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_outbound",
            "module.vpc-PP.aws_network_acl_rule.intra_inbound",
            "module.vpc-PP.aws_network_acl_rule.intra_outbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_inbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_outbound",
            "module.vpc-PP.aws_network_acl_rule.private_inbound",
            "module.vpc-PP.aws_network_acl_rule.private_outbound",
            "module.vpc-PP.aws_network_acl_rule.public_inbound",
            "module.vpc-PP.aws_network_acl_rule.public_outbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_inbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_outbound",
            "module.vpc-PP.aws_redshift_subnet_group.redshift",
            "module.vpc-PP.aws_route.database_dns64_nat_gateway",
            "module.vpc-PP.aws_route.database_internet_gateway",
            "module.vpc-PP.aws_route.database_ipv6_egress",
            "module.vpc-PP.aws_route.database_nat_gateway",
            "module.vpc-PP.aws_route.private_dns64_nat_gateway",
            "module.vpc-PP.aws_route.private_ipv6_egress",
            "module.vpc-PP.aws_route.private_nat_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway_ipv6",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.elasticache",
            "module.vpc-PP.aws_route_table.intra",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_route_table.redshift",
            "module.vpc-PP.aws_route_table_association.database",
            "module.vpc-PP.aws_route_table_association.elasticache",
            "module.vpc-PP.aws_route_table_association.intra",
            "module.vpc-PP.aws_route_table_association.outpost",
            "module.vpc-PP.aws_route_table_association.private",
            "module.vpc-PP.aws_route_table_association.public",
            "module.vpc-PP.aws_route_table_association.redshift",
            "module.vpc-PP.aws_route_table_association.redshift_public",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_subnet.elasticache",
            "module.vpc-PP.aws_subnet.intra",
            "module.vpc-PP.aws_subnet.outpost",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_subnet.redshift",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_block_public_access_exclusion.this",
            "module.vpc-PP.aws_vpc_block_public_access_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options_association.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-PP.aws_vpn_gateway.this",
            "module.vpc-PP.aws_vpn_gateway_attachment.this",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.intra",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.private",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.public",
            "module.vpc-PP.data.aws_caller_identity.current",
            "module.vpc-PP.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc-PP.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc-PP.data.aws_partition.current",
            "module.vpc-PP.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group/sg-0b96486a7663dfbfc",
            "description": "Security group for alb-demo application load balancer",
            "egress": [],
            "id": "sg-0b96486a7663dfbfc",
            "ingress": [],
            "name": "alb-demo-20250711022034304400000008",
            "name_prefix": "alb-demo-",
            "owner_id": "810731468394",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-PP.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group/sg-0cb69b47b39553661",
            "description": "security group created for alb which will allow port and 80 from everywhere",
            "egress": [],
            "id": "sg-0cb69b47b39553661",
            "ingress": [],
            "name": "alb-sg-20250711022033936400000006",
            "name_prefix": "alb-sg-",
            "owner_id": "810731468394",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "alb-sg",
              "environment": "dev",
              "owners": "self"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-PP.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-75266097",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0cb69b47b39553661",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3888238117",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0cb69b47b39553661",
            "security_group_rule_id": "sgr-08803f4394fce101e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:subnet/subnet-0969f2aeb01c5011c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0969f2aeb01c5011c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810731468394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "public-subnet-1",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.bastion_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fd26c36a83ae0088",
            "arn": "arn:aws:ec2:us-east-1:810731468394:instance/i-0fb538626e8a406fc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb538626e8a406fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PP-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dbecc4a95b8affe8",
            "private_dns": "ip-10-0-0-218.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.218",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d3046799daf00282",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0969f2aeb01c5011c",
            "tags": {
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "self"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "environment": "dev",
              "owners": "self"
            },
            "vpc_security_group_ids": [
              "sg-000a050d11d6d6117",
              "sg-0a042586e72fe5b34"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.Demo",
            "module.bastion_instance.aws_iam_instance_profile.this",
            "module.bastion_instance.aws_iam_role.this",
            "module.bastion_instance.aws_security_group.this",
            "module.bastion_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.bastion_instance.data.aws_partition.current",
            "module.bastion_instance.data.aws_ssm_parameter.this",
            "module.bastion_instance.data.aws_subnet.this",
            "module.bastion_security_group.aws_security_group.this",
            "module.bastion_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group/sg-000a050d11d6d6117",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-000a050d11d6d6117",
            "ingress": [],
            "name": "-2025071102203571710000000b",
            "name_prefix": "-",
            "owner_id": "810731468394",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "",
              "environment": "dev",
              "owners": "self"
            },
            "timeouts": null,
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.bastion_instance.data.aws_subnet.this",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion_instance",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group-rule/sgr-01bc4d416f8d85fe7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-01bc4d416f8d85fe7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-000a050d11d6d6117",
            "security_group_rule_id": "sgr-01bc4d416f8d85fe7",
            "tags": {
              "Name": "-ipv4_default",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "-ipv4_default",
              "environment": "dev",
              "owners": "self"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.bastion_instance.aws_security_group.this",
            "module.bastion_instance.data.aws_subnet.this",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group-rule/sgr-052c146209755f056",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-052c146209755f056",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-000a050d11d6d6117",
            "security_group_rule_id": "sgr-052c146209755f056",
            "tags": {
              "Name": "-ipv6_default",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "-ipv6_default",
              "environment": "dev",
              "owners": "self"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.bastion_instance.aws_security_group.this",
            "module.bastion_instance.data.aws_subnet.this",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group/sg-0a042586e72fe5b34",
            "description": "Security group for bastion with SSH and HTTP access",
            "egress": [],
            "id": "sg-0a042586e72fe5b34",
            "ingress": [],
            "name": "bastion-SG-20250711022034079000000007",
            "name_prefix": "bastion-SG-",
            "owner_id": "810731468394",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-SG",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "bastion-SG",
              "environment": "dev",
              "owners": "self"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-PP.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3437662874",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0a042586e72fe5b34",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion_security_group.aws_security_group.this",
            "module.bastion_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH access",
            "from_port": 22,
            "id": "sgrule-808272101",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0a042586e72fe5b34",
            "security_group_rule_id": "sgr-024fe90b26f4913b6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion_security_group.aws_security_group.this",
            "module.bastion_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP access",
            "from_port": 80,
            "id": "sgrule-2259098960",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0a042586e72fe5b34",
            "security_group_rule_id": "sgr-01c1132a32dda96c8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion_security_group.aws_security_group.this",
            "module.bastion_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_instance[\"server-1\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:subnet/subnet-03961459b5eba2a94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03961459b5eba2a94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810731468394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "private-subnet-1",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.private_instance[\"server-1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fd26c36a83ae0088",
            "arn": "arn:aws:ec2:us-east-1:810731468394:instance/i-0a4d322b2427ace8d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4d322b2427ace8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PP-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04df27894ed40fff3",
            "private_dns": "ip-10-0-2-117.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.117",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0471ac467b2dfbb80",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03961459b5eba2a94",
            "tags": {
              "Name": "server-1",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "server-1",
              "environment": "dev",
              "owners": "self"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "server-1",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_security_group_ids": [
              "sg-040aaf521e9754462",
              "sg-08eea02bfed9b0b9e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.Demo",
            "module.private_instance.aws_iam_instance_profile.this",
            "module.private_instance.aws_iam_role.this",
            "module.private_instance.aws_security_group.this",
            "module.private_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.private_instance.data.aws_partition.current",
            "module.private_instance.data.aws_ssm_parameter.this",
            "module.private_instance.data.aws_subnet.this",
            "module.private_security_group.aws_security_group.this",
            "module.private_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_cloudwatch_log_group.flow_log",
            "module.vpc-PP.aws_customer_gateway.this",
            "module.vpc-PP.aws_db_subnet_group.database",
            "module.vpc-PP.aws_default_network_acl.this",
            "module.vpc-PP.aws_default_route_table.default",
            "module.vpc-PP.aws_default_security_group.this",
            "module.vpc-PP.aws_default_vpc.this",
            "module.vpc-PP.aws_egress_only_internet_gateway.this",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_elasticache_subnet_group.elasticache",
            "module.vpc-PP.aws_flow_log.this",
            "module.vpc-PP.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_nat_gateway.this",
            "module.vpc-PP.aws_network_acl.database",
            "module.vpc-PP.aws_network_acl.elasticache",
            "module.vpc-PP.aws_network_acl.intra",
            "module.vpc-PP.aws_network_acl.outpost",
            "module.vpc-PP.aws_network_acl.private",
            "module.vpc-PP.aws_network_acl.public",
            "module.vpc-PP.aws_network_acl.redshift",
            "module.vpc-PP.aws_network_acl_rule.database_inbound",
            "module.vpc-PP.aws_network_acl_rule.database_outbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_inbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_outbound",
            "module.vpc-PP.aws_network_acl_rule.intra_inbound",
            "module.vpc-PP.aws_network_acl_rule.intra_outbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_inbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_outbound",
            "module.vpc-PP.aws_network_acl_rule.private_inbound",
            "module.vpc-PP.aws_network_acl_rule.private_outbound",
            "module.vpc-PP.aws_network_acl_rule.public_inbound",
            "module.vpc-PP.aws_network_acl_rule.public_outbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_inbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_outbound",
            "module.vpc-PP.aws_redshift_subnet_group.redshift",
            "module.vpc-PP.aws_route.database_dns64_nat_gateway",
            "module.vpc-PP.aws_route.database_internet_gateway",
            "module.vpc-PP.aws_route.database_ipv6_egress",
            "module.vpc-PP.aws_route.database_nat_gateway",
            "module.vpc-PP.aws_route.private_dns64_nat_gateway",
            "module.vpc-PP.aws_route.private_ipv6_egress",
            "module.vpc-PP.aws_route.private_nat_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway_ipv6",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.elasticache",
            "module.vpc-PP.aws_route_table.intra",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_route_table.redshift",
            "module.vpc-PP.aws_route_table_association.database",
            "module.vpc-PP.aws_route_table_association.elasticache",
            "module.vpc-PP.aws_route_table_association.intra",
            "module.vpc-PP.aws_route_table_association.outpost",
            "module.vpc-PP.aws_route_table_association.private",
            "module.vpc-PP.aws_route_table_association.public",
            "module.vpc-PP.aws_route_table_association.redshift",
            "module.vpc-PP.aws_route_table_association.redshift_public",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_subnet.elasticache",
            "module.vpc-PP.aws_subnet.intra",
            "module.vpc-PP.aws_subnet.outpost",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_subnet.redshift",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_block_public_access_exclusion.this",
            "module.vpc-PP.aws_vpc_block_public_access_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options_association.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-PP.aws_vpn_gateway.this",
            "module.vpc-PP.aws_vpn_gateway_attachment.this",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.intra",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.private",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.public",
            "module.vpc-PP.data.aws_caller_identity.current",
            "module.vpc-PP.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc-PP.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc-PP.data.aws_partition.current",
            "module.vpc-PP.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.private_instance[\"server-1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group/sg-040aaf521e9754462",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-040aaf521e9754462",
            "ingress": [],
            "name": "server-1-2025071102223118480000000e",
            "name_prefix": "server-1-",
            "owner_id": "810731468394",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "server-1",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "server-1",
              "environment": "dev",
              "owners": "self"
            },
            "timeouts": null,
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.private_instance.data.aws_subnet.this",
            "module.vpc-PP.aws_cloudwatch_log_group.flow_log",
            "module.vpc-PP.aws_customer_gateway.this",
            "module.vpc-PP.aws_db_subnet_group.database",
            "module.vpc-PP.aws_default_network_acl.this",
            "module.vpc-PP.aws_default_route_table.default",
            "module.vpc-PP.aws_default_security_group.this",
            "module.vpc-PP.aws_default_vpc.this",
            "module.vpc-PP.aws_egress_only_internet_gateway.this",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_elasticache_subnet_group.elasticache",
            "module.vpc-PP.aws_flow_log.this",
            "module.vpc-PP.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_nat_gateway.this",
            "module.vpc-PP.aws_network_acl.database",
            "module.vpc-PP.aws_network_acl.elasticache",
            "module.vpc-PP.aws_network_acl.intra",
            "module.vpc-PP.aws_network_acl.outpost",
            "module.vpc-PP.aws_network_acl.private",
            "module.vpc-PP.aws_network_acl.public",
            "module.vpc-PP.aws_network_acl.redshift",
            "module.vpc-PP.aws_network_acl_rule.database_inbound",
            "module.vpc-PP.aws_network_acl_rule.database_outbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_inbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_outbound",
            "module.vpc-PP.aws_network_acl_rule.intra_inbound",
            "module.vpc-PP.aws_network_acl_rule.intra_outbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_inbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_outbound",
            "module.vpc-PP.aws_network_acl_rule.private_inbound",
            "module.vpc-PP.aws_network_acl_rule.private_outbound",
            "module.vpc-PP.aws_network_acl_rule.public_inbound",
            "module.vpc-PP.aws_network_acl_rule.public_outbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_inbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_outbound",
            "module.vpc-PP.aws_redshift_subnet_group.redshift",
            "module.vpc-PP.aws_route.database_dns64_nat_gateway",
            "module.vpc-PP.aws_route.database_internet_gateway",
            "module.vpc-PP.aws_route.database_ipv6_egress",
            "module.vpc-PP.aws_route.database_nat_gateway",
            "module.vpc-PP.aws_route.private_dns64_nat_gateway",
            "module.vpc-PP.aws_route.private_ipv6_egress",
            "module.vpc-PP.aws_route.private_nat_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway_ipv6",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.elasticache",
            "module.vpc-PP.aws_route_table.intra",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_route_table.redshift",
            "module.vpc-PP.aws_route_table_association.database",
            "module.vpc-PP.aws_route_table_association.elasticache",
            "module.vpc-PP.aws_route_table_association.intra",
            "module.vpc-PP.aws_route_table_association.outpost",
            "module.vpc-PP.aws_route_table_association.private",
            "module.vpc-PP.aws_route_table_association.public",
            "module.vpc-PP.aws_route_table_association.redshift",
            "module.vpc-PP.aws_route_table_association.redshift_public",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_subnet.elasticache",
            "module.vpc-PP.aws_subnet.intra",
            "module.vpc-PP.aws_subnet.outpost",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_subnet.redshift",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_block_public_access_exclusion.this",
            "module.vpc-PP.aws_vpc_block_public_access_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options_association.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-PP.aws_vpn_gateway.this",
            "module.vpc-PP.aws_vpn_gateway_attachment.this",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.intra",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.private",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.public",
            "module.vpc-PP.data.aws_caller_identity.current",
            "module.vpc-PP.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc-PP.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc-PP.data.aws_partition.current",
            "module.vpc-PP.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_instance[\"server-1\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group-rule/sgr-0a573aaf6b3635388",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0a573aaf6b3635388",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-040aaf521e9754462",
            "security_group_rule_id": "sgr-0a573aaf6b3635388",
            "tags": {
              "Name": "server-1-ipv4_default",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "server-1-ipv4_default",
              "environment": "dev",
              "owners": "self"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.private_instance.aws_security_group.this",
            "module.private_instance.data.aws_subnet.this",
            "module.vpc-PP.aws_cloudwatch_log_group.flow_log",
            "module.vpc-PP.aws_customer_gateway.this",
            "module.vpc-PP.aws_db_subnet_group.database",
            "module.vpc-PP.aws_default_network_acl.this",
            "module.vpc-PP.aws_default_route_table.default",
            "module.vpc-PP.aws_default_security_group.this",
            "module.vpc-PP.aws_default_vpc.this",
            "module.vpc-PP.aws_egress_only_internet_gateway.this",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_elasticache_subnet_group.elasticache",
            "module.vpc-PP.aws_flow_log.this",
            "module.vpc-PP.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_nat_gateway.this",
            "module.vpc-PP.aws_network_acl.database",
            "module.vpc-PP.aws_network_acl.elasticache",
            "module.vpc-PP.aws_network_acl.intra",
            "module.vpc-PP.aws_network_acl.outpost",
            "module.vpc-PP.aws_network_acl.private",
            "module.vpc-PP.aws_network_acl.public",
            "module.vpc-PP.aws_network_acl.redshift",
            "module.vpc-PP.aws_network_acl_rule.database_inbound",
            "module.vpc-PP.aws_network_acl_rule.database_outbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_inbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_outbound",
            "module.vpc-PP.aws_network_acl_rule.intra_inbound",
            "module.vpc-PP.aws_network_acl_rule.intra_outbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_inbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_outbound",
            "module.vpc-PP.aws_network_acl_rule.private_inbound",
            "module.vpc-PP.aws_network_acl_rule.private_outbound",
            "module.vpc-PP.aws_network_acl_rule.public_inbound",
            "module.vpc-PP.aws_network_acl_rule.public_outbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_inbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_outbound",
            "module.vpc-PP.aws_redshift_subnet_group.redshift",
            "module.vpc-PP.aws_route.database_dns64_nat_gateway",
            "module.vpc-PP.aws_route.database_internet_gateway",
            "module.vpc-PP.aws_route.database_ipv6_egress",
            "module.vpc-PP.aws_route.database_nat_gateway",
            "module.vpc-PP.aws_route.private_dns64_nat_gateway",
            "module.vpc-PP.aws_route.private_ipv6_egress",
            "module.vpc-PP.aws_route.private_nat_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway_ipv6",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.elasticache",
            "module.vpc-PP.aws_route_table.intra",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_route_table.redshift",
            "module.vpc-PP.aws_route_table_association.database",
            "module.vpc-PP.aws_route_table_association.elasticache",
            "module.vpc-PP.aws_route_table_association.intra",
            "module.vpc-PP.aws_route_table_association.outpost",
            "module.vpc-PP.aws_route_table_association.private",
            "module.vpc-PP.aws_route_table_association.public",
            "module.vpc-PP.aws_route_table_association.redshift",
            "module.vpc-PP.aws_route_table_association.redshift_public",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_subnet.elasticache",
            "module.vpc-PP.aws_subnet.intra",
            "module.vpc-PP.aws_subnet.outpost",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_subnet.redshift",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_block_public_access_exclusion.this",
            "module.vpc-PP.aws_vpc_block_public_access_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options_association.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-PP.aws_vpn_gateway.this",
            "module.vpc-PP.aws_vpn_gateway_attachment.this",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.intra",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.private",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.public",
            "module.vpc-PP.data.aws_caller_identity.current",
            "module.vpc-PP.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc-PP.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc-PP.data.aws_partition.current",
            "module.vpc-PP.data.aws_region.current"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group-rule/sgr-0fbb30dd18947014e",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0fbb30dd18947014e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-040aaf521e9754462",
            "security_group_rule_id": "sgr-0fbb30dd18947014e",
            "tags": {
              "Name": "server-1-ipv6_default",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "server-1-ipv6_default",
              "environment": "dev",
              "owners": "self"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.private_instance.aws_security_group.this",
            "module.private_instance.data.aws_subnet.this",
            "module.vpc-PP.aws_cloudwatch_log_group.flow_log",
            "module.vpc-PP.aws_customer_gateway.this",
            "module.vpc-PP.aws_db_subnet_group.database",
            "module.vpc-PP.aws_default_network_acl.this",
            "module.vpc-PP.aws_default_route_table.default",
            "module.vpc-PP.aws_default_security_group.this",
            "module.vpc-PP.aws_default_vpc.this",
            "module.vpc-PP.aws_egress_only_internet_gateway.this",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_elasticache_subnet_group.elasticache",
            "module.vpc-PP.aws_flow_log.this",
            "module.vpc-PP.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_nat_gateway.this",
            "module.vpc-PP.aws_network_acl.database",
            "module.vpc-PP.aws_network_acl.elasticache",
            "module.vpc-PP.aws_network_acl.intra",
            "module.vpc-PP.aws_network_acl.outpost",
            "module.vpc-PP.aws_network_acl.private",
            "module.vpc-PP.aws_network_acl.public",
            "module.vpc-PP.aws_network_acl.redshift",
            "module.vpc-PP.aws_network_acl_rule.database_inbound",
            "module.vpc-PP.aws_network_acl_rule.database_outbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_inbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_outbound",
            "module.vpc-PP.aws_network_acl_rule.intra_inbound",
            "module.vpc-PP.aws_network_acl_rule.intra_outbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_inbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_outbound",
            "module.vpc-PP.aws_network_acl_rule.private_inbound",
            "module.vpc-PP.aws_network_acl_rule.private_outbound",
            "module.vpc-PP.aws_network_acl_rule.public_inbound",
            "module.vpc-PP.aws_network_acl_rule.public_outbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_inbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_outbound",
            "module.vpc-PP.aws_redshift_subnet_group.redshift",
            "module.vpc-PP.aws_route.database_dns64_nat_gateway",
            "module.vpc-PP.aws_route.database_internet_gateway",
            "module.vpc-PP.aws_route.database_ipv6_egress",
            "module.vpc-PP.aws_route.database_nat_gateway",
            "module.vpc-PP.aws_route.private_dns64_nat_gateway",
            "module.vpc-PP.aws_route.private_ipv6_egress",
            "module.vpc-PP.aws_route.private_nat_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway_ipv6",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.elasticache",
            "module.vpc-PP.aws_route_table.intra",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_route_table.redshift",
            "module.vpc-PP.aws_route_table_association.database",
            "module.vpc-PP.aws_route_table_association.elasticache",
            "module.vpc-PP.aws_route_table_association.intra",
            "module.vpc-PP.aws_route_table_association.outpost",
            "module.vpc-PP.aws_route_table_association.private",
            "module.vpc-PP.aws_route_table_association.public",
            "module.vpc-PP.aws_route_table_association.redshift",
            "module.vpc-PP.aws_route_table_association.redshift_public",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_subnet.elasticache",
            "module.vpc-PP.aws_subnet.intra",
            "module.vpc-PP.aws_subnet.outpost",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_subnet.redshift",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_block_public_access_exclusion.this",
            "module.vpc-PP.aws_vpc_block_public_access_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options_association.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-PP.aws_vpn_gateway.this",
            "module.vpc-PP.aws_vpn_gateway_attachment.this",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.intra",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.private",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.public",
            "module.vpc-PP.data.aws_caller_identity.current",
            "module.vpc-PP.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc-PP.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc-PP.data.aws_partition.current",
            "module.vpc-PP.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.private_instance[\"server-2\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:subnet/subnet-03961459b5eba2a94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03961459b5eba2a94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810731468394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "private-subnet-1",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.private_instance[\"server-2\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fd26c36a83ae0088",
            "arn": "arn:aws:ec2:us-east-1:810731468394:instance/i-089f6dedc9f4f62ae",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089f6dedc9f4f62ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PP-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02f206c9532e4c9e4",
            "private_dns": "ip-10-0-2-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.35",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ad2393c6fdc8da8",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03961459b5eba2a94",
            "tags": {
              "Name": "server-2",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "server-2",
              "environment": "dev",
              "owners": "self"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "server-2",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_security_group_ids": [
              "sg-00d40d9b5892a5862",
              "sg-08eea02bfed9b0b9e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.Demo",
            "module.private_instance.aws_iam_instance_profile.this",
            "module.private_instance.aws_iam_role.this",
            "module.private_instance.aws_security_group.this",
            "module.private_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.private_instance.data.aws_partition.current",
            "module.private_instance.data.aws_ssm_parameter.this",
            "module.private_instance.data.aws_subnet.this",
            "module.private_security_group.aws_security_group.this",
            "module.private_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_cloudwatch_log_group.flow_log",
            "module.vpc-PP.aws_customer_gateway.this",
            "module.vpc-PP.aws_db_subnet_group.database",
            "module.vpc-PP.aws_default_network_acl.this",
            "module.vpc-PP.aws_default_route_table.default",
            "module.vpc-PP.aws_default_security_group.this",
            "module.vpc-PP.aws_default_vpc.this",
            "module.vpc-PP.aws_egress_only_internet_gateway.this",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_elasticache_subnet_group.elasticache",
            "module.vpc-PP.aws_flow_log.this",
            "module.vpc-PP.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_nat_gateway.this",
            "module.vpc-PP.aws_network_acl.database",
            "module.vpc-PP.aws_network_acl.elasticache",
            "module.vpc-PP.aws_network_acl.intra",
            "module.vpc-PP.aws_network_acl.outpost",
            "module.vpc-PP.aws_network_acl.private",
            "module.vpc-PP.aws_network_acl.public",
            "module.vpc-PP.aws_network_acl.redshift",
            "module.vpc-PP.aws_network_acl_rule.database_inbound",
            "module.vpc-PP.aws_network_acl_rule.database_outbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_inbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_outbound",
            "module.vpc-PP.aws_network_acl_rule.intra_inbound",
            "module.vpc-PP.aws_network_acl_rule.intra_outbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_inbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_outbound",
            "module.vpc-PP.aws_network_acl_rule.private_inbound",
            "module.vpc-PP.aws_network_acl_rule.private_outbound",
            "module.vpc-PP.aws_network_acl_rule.public_inbound",
            "module.vpc-PP.aws_network_acl_rule.public_outbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_inbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_outbound",
            "module.vpc-PP.aws_redshift_subnet_group.redshift",
            "module.vpc-PP.aws_route.database_dns64_nat_gateway",
            "module.vpc-PP.aws_route.database_internet_gateway",
            "module.vpc-PP.aws_route.database_ipv6_egress",
            "module.vpc-PP.aws_route.database_nat_gateway",
            "module.vpc-PP.aws_route.private_dns64_nat_gateway",
            "module.vpc-PP.aws_route.private_ipv6_egress",
            "module.vpc-PP.aws_route.private_nat_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway_ipv6",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.elasticache",
            "module.vpc-PP.aws_route_table.intra",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_route_table.redshift",
            "module.vpc-PP.aws_route_table_association.database",
            "module.vpc-PP.aws_route_table_association.elasticache",
            "module.vpc-PP.aws_route_table_association.intra",
            "module.vpc-PP.aws_route_table_association.outpost",
            "module.vpc-PP.aws_route_table_association.private",
            "module.vpc-PP.aws_route_table_association.public",
            "module.vpc-PP.aws_route_table_association.redshift",
            "module.vpc-PP.aws_route_table_association.redshift_public",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_subnet.elasticache",
            "module.vpc-PP.aws_subnet.intra",
            "module.vpc-PP.aws_subnet.outpost",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_subnet.redshift",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_block_public_access_exclusion.this",
            "module.vpc-PP.aws_vpc_block_public_access_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options_association.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-PP.aws_vpn_gateway.this",
            "module.vpc-PP.aws_vpn_gateway_attachment.this",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.intra",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.private",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.public",
            "module.vpc-PP.data.aws_caller_identity.current",
            "module.vpc-PP.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc-PP.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc-PP.data.aws_partition.current",
            "module.vpc-PP.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.private_instance[\"server-2\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group/sg-00d40d9b5892a5862",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00d40d9b5892a5862",
            "ingress": [],
            "name": "server-2-2025071102223118470000000d",
            "name_prefix": "server-2-",
            "owner_id": "810731468394",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "server-2",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "server-2",
              "environment": "dev",
              "owners": "self"
            },
            "timeouts": null,
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.private_instance.data.aws_subnet.this",
            "module.vpc-PP.aws_cloudwatch_log_group.flow_log",
            "module.vpc-PP.aws_customer_gateway.this",
            "module.vpc-PP.aws_db_subnet_group.database",
            "module.vpc-PP.aws_default_network_acl.this",
            "module.vpc-PP.aws_default_route_table.default",
            "module.vpc-PP.aws_default_security_group.this",
            "module.vpc-PP.aws_default_vpc.this",
            "module.vpc-PP.aws_egress_only_internet_gateway.this",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_elasticache_subnet_group.elasticache",
            "module.vpc-PP.aws_flow_log.this",
            "module.vpc-PP.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_nat_gateway.this",
            "module.vpc-PP.aws_network_acl.database",
            "module.vpc-PP.aws_network_acl.elasticache",
            "module.vpc-PP.aws_network_acl.intra",
            "module.vpc-PP.aws_network_acl.outpost",
            "module.vpc-PP.aws_network_acl.private",
            "module.vpc-PP.aws_network_acl.public",
            "module.vpc-PP.aws_network_acl.redshift",
            "module.vpc-PP.aws_network_acl_rule.database_inbound",
            "module.vpc-PP.aws_network_acl_rule.database_outbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_inbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_outbound",
            "module.vpc-PP.aws_network_acl_rule.intra_inbound",
            "module.vpc-PP.aws_network_acl_rule.intra_outbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_inbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_outbound",
            "module.vpc-PP.aws_network_acl_rule.private_inbound",
            "module.vpc-PP.aws_network_acl_rule.private_outbound",
            "module.vpc-PP.aws_network_acl_rule.public_inbound",
            "module.vpc-PP.aws_network_acl_rule.public_outbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_inbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_outbound",
            "module.vpc-PP.aws_redshift_subnet_group.redshift",
            "module.vpc-PP.aws_route.database_dns64_nat_gateway",
            "module.vpc-PP.aws_route.database_internet_gateway",
            "module.vpc-PP.aws_route.database_ipv6_egress",
            "module.vpc-PP.aws_route.database_nat_gateway",
            "module.vpc-PP.aws_route.private_dns64_nat_gateway",
            "module.vpc-PP.aws_route.private_ipv6_egress",
            "module.vpc-PP.aws_route.private_nat_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway_ipv6",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.elasticache",
            "module.vpc-PP.aws_route_table.intra",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_route_table.redshift",
            "module.vpc-PP.aws_route_table_association.database",
            "module.vpc-PP.aws_route_table_association.elasticache",
            "module.vpc-PP.aws_route_table_association.intra",
            "module.vpc-PP.aws_route_table_association.outpost",
            "module.vpc-PP.aws_route_table_association.private",
            "module.vpc-PP.aws_route_table_association.public",
            "module.vpc-PP.aws_route_table_association.redshift",
            "module.vpc-PP.aws_route_table_association.redshift_public",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_subnet.elasticache",
            "module.vpc-PP.aws_subnet.intra",
            "module.vpc-PP.aws_subnet.outpost",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_subnet.redshift",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_block_public_access_exclusion.this",
            "module.vpc-PP.aws_vpc_block_public_access_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options_association.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-PP.aws_vpn_gateway.this",
            "module.vpc-PP.aws_vpn_gateway_attachment.this",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.intra",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.private",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.public",
            "module.vpc-PP.data.aws_caller_identity.current",
            "module.vpc-PP.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc-PP.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc-PP.data.aws_partition.current",
            "module.vpc-PP.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_instance[\"server-2\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group-rule/sgr-04147ebf3ca603a62",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-04147ebf3ca603a62",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-00d40d9b5892a5862",
            "security_group_rule_id": "sgr-04147ebf3ca603a62",
            "tags": {
              "Name": "server-2-ipv4_default",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "server-2-ipv4_default",
              "environment": "dev",
              "owners": "self"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.private_instance.aws_security_group.this",
            "module.private_instance.data.aws_subnet.this",
            "module.vpc-PP.aws_cloudwatch_log_group.flow_log",
            "module.vpc-PP.aws_customer_gateway.this",
            "module.vpc-PP.aws_db_subnet_group.database",
            "module.vpc-PP.aws_default_network_acl.this",
            "module.vpc-PP.aws_default_route_table.default",
            "module.vpc-PP.aws_default_security_group.this",
            "module.vpc-PP.aws_default_vpc.this",
            "module.vpc-PP.aws_egress_only_internet_gateway.this",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_elasticache_subnet_group.elasticache",
            "module.vpc-PP.aws_flow_log.this",
            "module.vpc-PP.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_nat_gateway.this",
            "module.vpc-PP.aws_network_acl.database",
            "module.vpc-PP.aws_network_acl.elasticache",
            "module.vpc-PP.aws_network_acl.intra",
            "module.vpc-PP.aws_network_acl.outpost",
            "module.vpc-PP.aws_network_acl.private",
            "module.vpc-PP.aws_network_acl.public",
            "module.vpc-PP.aws_network_acl.redshift",
            "module.vpc-PP.aws_network_acl_rule.database_inbound",
            "module.vpc-PP.aws_network_acl_rule.database_outbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_inbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_outbound",
            "module.vpc-PP.aws_network_acl_rule.intra_inbound",
            "module.vpc-PP.aws_network_acl_rule.intra_outbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_inbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_outbound",
            "module.vpc-PP.aws_network_acl_rule.private_inbound",
            "module.vpc-PP.aws_network_acl_rule.private_outbound",
            "module.vpc-PP.aws_network_acl_rule.public_inbound",
            "module.vpc-PP.aws_network_acl_rule.public_outbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_inbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_outbound",
            "module.vpc-PP.aws_redshift_subnet_group.redshift",
            "module.vpc-PP.aws_route.database_dns64_nat_gateway",
            "module.vpc-PP.aws_route.database_internet_gateway",
            "module.vpc-PP.aws_route.database_ipv6_egress",
            "module.vpc-PP.aws_route.database_nat_gateway",
            "module.vpc-PP.aws_route.private_dns64_nat_gateway",
            "module.vpc-PP.aws_route.private_ipv6_egress",
            "module.vpc-PP.aws_route.private_nat_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway_ipv6",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.elasticache",
            "module.vpc-PP.aws_route_table.intra",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_route_table.redshift",
            "module.vpc-PP.aws_route_table_association.database",
            "module.vpc-PP.aws_route_table_association.elasticache",
            "module.vpc-PP.aws_route_table_association.intra",
            "module.vpc-PP.aws_route_table_association.outpost",
            "module.vpc-PP.aws_route_table_association.private",
            "module.vpc-PP.aws_route_table_association.public",
            "module.vpc-PP.aws_route_table_association.redshift",
            "module.vpc-PP.aws_route_table_association.redshift_public",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_subnet.elasticache",
            "module.vpc-PP.aws_subnet.intra",
            "module.vpc-PP.aws_subnet.outpost",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_subnet.redshift",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_block_public_access_exclusion.this",
            "module.vpc-PP.aws_vpc_block_public_access_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options_association.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-PP.aws_vpn_gateway.this",
            "module.vpc-PP.aws_vpn_gateway_attachment.this",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.intra",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.private",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.public",
            "module.vpc-PP.data.aws_caller_identity.current",
            "module.vpc-PP.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc-PP.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc-PP.data.aws_partition.current",
            "module.vpc-PP.data.aws_region.current"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group-rule/sgr-0d3433e26895fa76c",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0d3433e26895fa76c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-00d40d9b5892a5862",
            "security_group_rule_id": "sgr-0d3433e26895fa76c",
            "tags": {
              "Name": "server-2-ipv6_default",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "server-2-ipv6_default",
              "environment": "dev",
              "owners": "self"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.private_instance.aws_security_group.this",
            "module.private_instance.data.aws_subnet.this",
            "module.vpc-PP.aws_cloudwatch_log_group.flow_log",
            "module.vpc-PP.aws_customer_gateway.this",
            "module.vpc-PP.aws_db_subnet_group.database",
            "module.vpc-PP.aws_default_network_acl.this",
            "module.vpc-PP.aws_default_route_table.default",
            "module.vpc-PP.aws_default_security_group.this",
            "module.vpc-PP.aws_default_vpc.this",
            "module.vpc-PP.aws_egress_only_internet_gateway.this",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_elasticache_subnet_group.elasticache",
            "module.vpc-PP.aws_flow_log.this",
            "module.vpc-PP.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_nat_gateway.this",
            "module.vpc-PP.aws_network_acl.database",
            "module.vpc-PP.aws_network_acl.elasticache",
            "module.vpc-PP.aws_network_acl.intra",
            "module.vpc-PP.aws_network_acl.outpost",
            "module.vpc-PP.aws_network_acl.private",
            "module.vpc-PP.aws_network_acl.public",
            "module.vpc-PP.aws_network_acl.redshift",
            "module.vpc-PP.aws_network_acl_rule.database_inbound",
            "module.vpc-PP.aws_network_acl_rule.database_outbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_inbound",
            "module.vpc-PP.aws_network_acl_rule.elasticache_outbound",
            "module.vpc-PP.aws_network_acl_rule.intra_inbound",
            "module.vpc-PP.aws_network_acl_rule.intra_outbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_inbound",
            "module.vpc-PP.aws_network_acl_rule.outpost_outbound",
            "module.vpc-PP.aws_network_acl_rule.private_inbound",
            "module.vpc-PP.aws_network_acl_rule.private_outbound",
            "module.vpc-PP.aws_network_acl_rule.public_inbound",
            "module.vpc-PP.aws_network_acl_rule.public_outbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_inbound",
            "module.vpc-PP.aws_network_acl_rule.redshift_outbound",
            "module.vpc-PP.aws_redshift_subnet_group.redshift",
            "module.vpc-PP.aws_route.database_dns64_nat_gateway",
            "module.vpc-PP.aws_route.database_internet_gateway",
            "module.vpc-PP.aws_route.database_ipv6_egress",
            "module.vpc-PP.aws_route.database_nat_gateway",
            "module.vpc-PP.aws_route.private_dns64_nat_gateway",
            "module.vpc-PP.aws_route.private_ipv6_egress",
            "module.vpc-PP.aws_route.private_nat_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway",
            "module.vpc-PP.aws_route.public_internet_gateway_ipv6",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.elasticache",
            "module.vpc-PP.aws_route_table.intra",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_route_table.redshift",
            "module.vpc-PP.aws_route_table_association.database",
            "module.vpc-PP.aws_route_table_association.elasticache",
            "module.vpc-PP.aws_route_table_association.intra",
            "module.vpc-PP.aws_route_table_association.outpost",
            "module.vpc-PP.aws_route_table_association.private",
            "module.vpc-PP.aws_route_table_association.public",
            "module.vpc-PP.aws_route_table_association.redshift",
            "module.vpc-PP.aws_route_table_association.redshift_public",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_subnet.elasticache",
            "module.vpc-PP.aws_subnet.intra",
            "module.vpc-PP.aws_subnet.outpost",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_subnet.redshift",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_block_public_access_exclusion.this",
            "module.vpc-PP.aws_vpc_block_public_access_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options.this",
            "module.vpc-PP.aws_vpc_dhcp_options_association.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-PP.aws_vpn_gateway.this",
            "module.vpc-PP.aws_vpn_gateway_attachment.this",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.intra",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.private",
            "module.vpc-PP.aws_vpn_gateway_route_propagation.public",
            "module.vpc-PP.data.aws_caller_identity.current",
            "module.vpc-PP.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc-PP.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc-PP.data.aws_partition.current",
            "module.vpc-PP.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.private_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group/sg-08eea02bfed9b0b9e",
            "description": "security group created for private which will allow port 22 and 80 from vpc range only",
            "egress": [],
            "id": "sg-08eea02bfed9b0b9e",
            "ingress": [],
            "name": "private-sg-20250711022033681500000005",
            "name_prefix": "private-sg-",
            "owner_id": "810731468394",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "private-sg",
              "environment": "dev",
              "owners": "self"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-PP.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2155005604",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-08eea02bfed9b0b9e",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_security_group.aws_security_group.this",
            "module.private_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2262636073",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-08eea02bfed9b0b9e",
            "security_group_rule_id": "sgr-089d85d4ad12c0428",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_security_group.aws_security_group.this",
            "module.private_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-179689239",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-08eea02bfed9b0b9e",
            "security_group_rule_id": "sgr-036d16238d24b21b4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_security_group.aws_security_group.this",
            "module.private_security_group.aws_security_group.this_name_prefix",
            "module.vpc-PP.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:network-acl/acl-094c0053beb4d871f",
            "default_network_acl_id": "acl-094c0053beb4d871f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-094c0053beb4d871f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "810731468394",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-007a90ea162b7745d",
              "subnet-03961459b5eba2a94",
              "subnet-0969f2aeb01c5011c",
              "subnet-0a288df5206cb140c",
              "subnet-0bca382fc7fda2bd9",
              "subnet-0fd3c6bbe3634810e"
            ],
            "tags": {
              "Name": "vpc-dev-default",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "vpc-dev-default",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-PP.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:route-table/rtb-0b733a32a1e1361b3",
            "default_route_table_id": "rtb-0b733a32a1e1361b3",
            "id": "rtb-0b733a32a1e1361b3",
            "owner_id": "810731468394",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "vpc-dev-default",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "vpc-dev-default",
              "environment": "dev",
              "owners": "self"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-PP.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:security-group/sg-0095e748629f643b1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0095e748629f643b1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "810731468394",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-dev-default",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "vpc-dev-default",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-PP.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ccf1ff543b2e001",
            "arn": "arn:aws:ec2:us-east-1:810731468394:elastic-ip/eipalloc-08ccf1ff543b2e001",
            "domain": "vpc",
            "id": "eipalloc-08ccf1ff543b2e001",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-159-95-15.compute-1.amazonaws.com",
            "public_ip": "54.159.95.15",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-dev-us-east-1a",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "vpc-dev-us-east-1a",
              "environment": "dev",
              "owners": "self"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:internet-gateway/igw-0fd7193b2853845ac",
            "id": "igw-0fd7193b2853845ac",
            "owner_id": "810731468394",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-dev",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "vpc-dev",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ccf1ff543b2e001",
            "association_id": "eipassoc-07fb8377f701fa041",
            "connectivity_type": "public",
            "id": "nat-0d094fcefc65060c8",
            "network_interface_id": "eni-01b3924b5d6c77684",
            "private_ip": "10.0.0.105",
            "public_ip": "54.159.95.15",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0969f2aeb01c5011c",
            "tags": {
              "Name": "vpc-dev-us-east-1a",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "vpc-dev-us-east-1a",
              "environment": "dev",
              "owners": "self"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b8ff8515af345faf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d094fcefc65060c8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0b8ff8515af345faf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_eip.nat",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_nat_gateway.this",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fd7193b2853845ac",
            "id": "r-rtb-04551a8c3d28dd8271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-04551a8c3d28dd827",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_internet_gateway.this",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:route-table/rtb-08edb3d9b17c22dba",
            "id": "rtb-08edb3d9b17c22dba",
            "owner_id": "810731468394",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "vpc-dev-db",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "vpc-dev-db",
              "environment": "dev",
              "owners": "self"
            },
            "timeouts": null,
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:route-table/rtb-0b8ff8515af345faf",
            "id": "rtb-0b8ff8515af345faf",
            "owner_id": "810731468394",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "vpc-dev-private",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "vpc-dev-private",
              "environment": "dev",
              "owners": "self"
            },
            "timeouts": null,
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:route-table/rtb-04551a8c3d28dd827",
            "id": "rtb-04551a8c3d28dd827",
            "owner_id": "810731468394",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "vpc-dev-public",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "vpc-dev-public",
              "environment": "dev",
              "owners": "self"
            },
            "timeouts": null,
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd64e24223dda383",
            "region": "us-east-1",
            "route_table_id": "rtb-08edb3d9b17c22dba",
            "subnet_id": "subnet-0fd3c6bbe3634810e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5e8eb9da826bce8",
            "region": "us-east-1",
            "route_table_id": "rtb-08edb3d9b17c22dba",
            "subnet_id": "subnet-0bca382fc7fda2bd9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_route_table.database",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_subnet.database",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2fff1d20d5c487f",
            "region": "us-east-1",
            "route_table_id": "rtb-0b8ff8515af345faf",
            "subnet_id": "subnet-03961459b5eba2a94"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0535e409c93d5bbb2",
            "region": "us-east-1",
            "route_table_id": "rtb-0b8ff8515af345faf",
            "subnet_id": "subnet-0a288df5206cb140c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_route_table.private",
            "module.vpc-PP.aws_subnet.private",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da3725002725ed6b",
            "region": "us-east-1",
            "route_table_id": "rtb-04551a8c3d28dd827",
            "subnet_id": "subnet-0969f2aeb01c5011c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfdfb40353ee4e0b",
            "region": "us-east-1",
            "route_table_id": "rtb-04551a8c3d28dd827",
            "subnet_id": "subnet-007a90ea162b7745d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_route_table.public",
            "module.vpc-PP.aws_subnet.public",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:subnet/subnet-0fd3c6bbe3634810e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd3c6bbe3634810e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810731468394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "database-subnet-1",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "database-subnet-1",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:subnet/subnet-0bca382fc7fda2bd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bca382fc7fda2bd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810731468394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "database-subnet-2",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "database-subnet-2",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:subnet/subnet-03961459b5eba2a94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03961459b5eba2a94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810731468394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-1",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:subnet/subnet-0a288df5206cb140c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a288df5206cb140c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810731468394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-2",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "private-subnet-2",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:subnet/subnet-0969f2aeb01c5011c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0969f2aeb01c5011c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810731468394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:subnet/subnet-007a90ea162b7745d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007a90ea162b7745d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810731468394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-2",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "environment": "dev",
              "owners": "self"
            },
            "vpc_id": "vpc-0531c08eba04a0679"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.Demo",
            "module.vpc-PP.aws_vpc.this",
            "module.vpc-PP.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-PP",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810731468394:vpc/vpc-0531c08eba04a0679",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094c0053beb4d871f",
            "default_route_table_id": "rtb-0b733a32a1e1361b3",
            "default_security_group_id": "sg-0095e748629f643b1",
            "dhcp_options_id": "dopt-054d4dd2a47dd202b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0531c08eba04a0679",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b733a32a1e1361b3",
            "owner_id": "810731468394",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-dev",
              "environment": "dev",
              "owners": "self"
            },
            "tags_all": {
              "Name": "vpc-dev",
              "environment": "dev",
              "owners": "self"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}